dash/src/app/scrollbar.css
* {
	scrollbar-color: auto;
	scrollbar-width: auto;
}

.scrollbar-thin::-webkit-scrollbar-track {
	background-color: var(--scrollbar-track);
	border-radius: var(--scrollbar-track-radius);
}

.scrollbar-thin::-webkit-scrollbar-track:hover {
	background-color: var(--scrollbar-track-hover, var(--scrollbar-track));
}

.scrollbar-thin::-webkit-scrollbar-track:active {
	background-color: var(--scrollbar-track-active, var(--scrollbar-track-hover, var(--scrollbar-track)));
}

.scrollbar-thin::-webkit-scrollbar-thumb {
	background-color: var(--scrollbar-thumb);
	border-radius: var(--scrollbar-thumb-radius);
}

.scrollbar-thin::-webkit-scrollbar-thumb:hover {
	background-color: var(--scrollbar-thumb-hover, var(--scrollbar-thumb));
}

.scrollbar-thin::-webkit-scrollbar-thumb:active {
	background-color: var(--scrollbar-thumb-active, var(--scrollbar-thumb-hover, var(--scrollbar-thumb)));
}

.scrollbar-thin::-webkit-scrollbar-corner {
	background-color: var(--scrollbar-corner);
	border-radius: var(--scrollbar-corner-radius);
}

.scrollbar-thin::-webkit-scrollbar-corner:hover {
	background-color: var(--scrollbar-corner-hover, var(--scrollbar-corner));
}

.scrollbar-thin::-webkit-scrollbar-corner:active {
	background-color: var(--scrollbar-corner-active, var(--scrollbar-corner-hover, var(--scrollbar-corner)));
}

.scrollbar-thin {
	scrollbar-color: var(--scrollbar-thumb, initial) var(--scrollbar-track, initial);
	scrollbar-width: thin;
}

.scrollbar-thin::-webkit-scrollbar {
	display: block;
	width: 8px;
	height: 8px;
}

.scrollbar-track-\[rgba\(10\2c 10\2c 10\2c 25\%\)\] {
	--scrollbar-track: hsla(0, 0%, 4%, 0.25) !important;
}

.scrollbar-thumb-light-gray {
	--scrollbar-thumb: #474747 !important;
}

::-webkit-scrollbar-track {
	background-color: var(--scrollbar-track);
	border-radius: var(--scrollbar-track-radius);
}

::-webkit-scrollbar-track:hover {
	background-color: var(--scrollbar-track-hover, var(--scrollbar-track));
}

::-webkit-scrollbar-track:active {
	background-color: var(--scrollbar-track-active, var(--scrollbar-track-hover, var(--scrollbar-track)));
}

::-webkit-scrollbar-thumb {
	background-color: var(--scrollbar-thumb);
	border-radius: var(--scrollbar-thumb-radius);
}

::-webkit-scrollbar-thumb:hover {
	background-color: var(--scrollbar-thumb-hover, var(--scrollbar-thumb));
}

::-webkit-scrollbar-thumb:active {
	background-color: var(--scrollbar-thumb-active, var(--scrollbar-thumb-hover, var(--scrollbar-thumb)));
}

::-webkit-scrollbar-corner {
	background-color: var(--scrollbar-corner);
	border-radius: var(--scrollbar-corner-radius);
}

::-webkit-scrollbar-corner:hover {
	background-color: var(--scrollbar-corner-hover, var(--scrollbar-corner));
}

::-webkit-scrollbar-corner:active {
	background-color: var(--scrollbar-corner-active, var(--scrollbar-corner-hover, var(--scrollbar-corner)));
}

* {
	scrollbar-color: var(--scrollbar-thumb, initial) var(--scrollbar-track, initial);
	scrollbar-width: thin;
}

::-webkit-scrollbar {
	display: block;
	width: 8px;
	height: 8px;
}

* {
	--scrollbar-track: hsla(0, 0%, 4%, 0.25);
	--scrollbar-thumb: #474747;
	--scrollbar-thumb-radius: 0.75rem;
	scrollbar-gutter: stable;
}

